--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  CI = "false"
 
 # Redirect all routes to index.html for React Router
 [[redirects]]
