--- a/server/package.json
+++ b/server/package.json
@@ -20,20 +20,21 @@
   "license": "MIT",
   "dependencies": {
     "@shopify/shopify-api": "^7.7.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "axios": "^1.11.0",
     "compression": "^1.7.4",
-    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "engines": {
