--- a/.env.production
+++ b/.env.production
@@ -9,11 +9,12 @@ SHOPIFY_API_SECRET=328bb82c0e3956224f30993107cbad48
 SCOPES=write_orders,read_orders,read_fulfillments,write_themes,read_themes,write_script_tags,read_script_tags,read_products,write_products
 
 # App URLs (Replace with your actual deployment URL)
-SHOPIFY_APP_URL=https://your-app-domain.com
-HOST=your-app-domain.com
+SHOPIFY_APP_URL=https://smartordertracking-backend.onrender.com
+HOST=smartordertracking-backend.onrender.com
+TUNNEL_URL=smartordertracking-backend.onrender.com
 
 # Frontend URL (for CORS and redirects)
-FRONTEND_URL=https://your-app-domain.com
+FRONTEND_URL=https://smartordertracking-frontend.netlify.app
 
 # Database Configuration
 DATABASE_URL=./database.sqlite
