--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.0.0",
-    "@shopify/app-bridge": "^3.7.0",
-    "@shopify/app-bridge-react": "^3.7.0",
+    "@shopify/app-bridge": "^4.1.0",
+    "@shopify/app-bridge-react": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "axios": "^1.4.0",
     "react-query": "^3.39.0",
+    "web-vitals": "^3.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0"
   },
