--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.0.0",
-    "@shopify/app-bridge": "^4.1.0",
-    "@shopify/app-bridge-react": "^4.1.0",
+    "@shopify/app-bridge": "^3.7.10",
+    "@shopify/app-bridge-react": "^3.7.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -14,7 +14,9 @@
     "react-query": "^3.39.0",
     "web-vitals": "^3.5.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^4.9.0",
+    "@types/node": "^18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "@types/node": "^18.0.0"
+    "react-scripts": "5.0.1"
   },
   "proxy": "http://localhost:3001"
 }
