Fix HOST environment variable to include https protocol

--- a/.env.production
+++ b/.env.production
@@ -10,7 +10,7 @@ SCOPES=write_orders,read_orders,read_fulfillments,write_themes,read_themes,write
 
 # App URLs (Replace with your actual deployment URL)
 SHOPIFY_APP_URL=https://shopify-tracking-backend.onrender.com
-HOST=shopify-tracking-backend.onrender.com
+HOST=https://shopify-tracking-backend.onrender.com
 TUNNEL_URL=shopify-tracking-backend.onrender.com
 
 # Frontend URL (for CORS and redirects)
