--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 name = "smart-order-tracking-page-builder"
 client_id = "896734937b1d23f2d7e4191de83f41c6"
-application_url = "https://shopify-tracking-backend.onrender.com"
+application_url = "https://smartordertracking.netlify.app"
 embedded = true
 
 [access_scopes]
@@ -11,8 +11,6 @@ scopes = "write_orders,read_orders,read_fulfillments,write_themes,read_themes,wr
 
 [auth]
 redirect_urls = [
-  "https://shopify-tracking-backend.onrender.com/auth/callback",
-  "https://shopify-tracking-backend.onrender.com/auth/shopify/callback",
   "https://shopify-tracking-backend.onrender.com/api/auth/callback"
 ]
 
